--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+SA:wght@100..400&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- Verification Meta Tag -->
+    <meta name="google-site-verification" content="5zF38VC0w93PLL8lGpRuGiIKcPhcz5KZqkn3rT3Ds5U" />
   </head>
   <body>
     <div id="root"></div>
