A few more changes

--- a/index.html
+++ b/index.html
@@ -1,23 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>JUSST</title>
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="/JUSSTChannelProfile.jpg" type="jpg">
-    <!-- Theme Colour -->
-     <meta name="theme-color" content="#1e1b4b">
-    <!-- Font Family Links -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+SA:wght@100..400&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <!-- Verification Meta Tag -->
-    <meta name="google-site-verification" content="5zF38VC0w93PLL8lGpRuGiIKcPhcz5KZqkn3rT3Ds5U" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+        />
+        <title>JUSST</title>
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="/JUSSTChannelProfile.jpg" type="jpg" />
+        <!-- Theme Colour -->
+        <meta name="theme-color" content="#1e1b4b" />
+        <!-- Font Family Links -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Playwrite+AU+SA:wght@100..400&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet"
+        />
+        <!-- Verification Meta Tag -->
+        <meta
+            name="google-site-verification"
+            content="5zF38VC0w93PLL8lGpRuGiIKcPhcz5KZqkn3rT3Ds5U"
+        />
+        <!-- For SEO -->
+        <meta name="'title" content="JUSST" />
+        <meta
+            name="description"
+            content="Learning is Boring, right? Let's make it fun!! Learning is a not a method, it is a process. When learnt with fun, the absorption of concepts open our mind to stimulating thoughts which light the bulbs in our mind. Ready to light some bulbs? "
+        />
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "WebSite",
+                "name": "JUSST",
+                "url": "https://jusst.netlify.app/"
+            }
+        </script>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.jsx"></script>
+    </body>
 </html>
